--- a/test/public/index.html
+++ b/test/public/index.html
@@ -25,7 +25,7 @@
     <div class="main">
       <h1>Tyranid Test Client</h1>
 
-      <p>Access the browser console to interact with the tyranid client.</p>
+      <p>Access the browser console to interact with the Tyranid client.</p>
 
       <p>The Tyranid test model is loaded.</p>
 
